# libzcash-orchard-c

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
include/: aead.h  aes_ct.h  base58.h  bip32.h  blake2b.h  chacha20poly1305.h  hwp.h  hwp_dispatcher.h  memzero.h  options.h  orchard.h  orchard_signer.h  pallas.h  pbkdf2.h  platform.h  rand.h  redpallas.h  secp256k1.h  wallet_lockout.h  zip244.h
scripts/: check_stack.sh
src/: aead.c  base58.c  bignum.c  bip32.c  blake2b.c  chacha20poly1305.c  hash_stubs.c  hwp.c  hwp_dispatcher.c  memzero.c  options.h  orchard.c  orchard_signer.c  pallas.c  pbkdf2.c  rand.c  redpallas.c  secp256k1.c  segwit_addr.c  sha2.c  sinsemilla_s.h  wallet_lockout.c  zip244.c
src/aes/: aes.h  aes_ct.c
tests/: CMakeLists.txt  test_base58.c  test_h5.c  test_hwp.c  test_hwp_dispatcher.c  test_orchard.c  test_signer.c  test_vectors.c  test_vectors.h
tools/gen_test_vectors/: Cargo.toml
tools/gen_test_vectors/src/: main.rs
